# sxt-dory

./: .gitignore  Cargo.toml  README.md  generate_srs.sh  generate_urs.sh  test_verification.rs
benches/: vmv_eval.rs
examples/: g1_msm_bench.rs  g2_scalar_mul_bench.rs  miller_loop_bench.rs  multi_pairing_bench.rs
src/: curve.rs  inner_product.rs  lib.rs  messages.rs
src/core/: builder.rs  commit.rs  evaluate.rs  inner_product.rs  interactive_protocol.rs  messages.rs  mod.rs  offload.rs  pcs.rs  recursion_prelude.rs  setup.rs  state.rs  vmv.rs
src/primitives/: arithmetic.rs  mod.rs  poly.rs  toy_transcript.rs  transcript.rs
src/vmv/: commit.rs  evaluate.rs  vmv_state.rs
tests/: evaluation_proof.rs  inner_product.rs  pcs.rs  soundness_ip.rs  soundness_pcs.rs  soundness_scalar_product.rs  soundness_vmv.rs
