[package]
name = "dory"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "A flexible implementation of the Dory polynomial commitment scheme."
repository = "https://github.com/spaceandtimelabs/sxt-dory"
exclude = [".github", "README.md"]

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-std = "0.5.0"
bincode = "1.3.3"
blake2 = "0.10.6"
digest = "0.10.7"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"

[patch.crates-io]
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
doc_markdown = "allow"
missing_docs_in_private_items = "warn"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
