[package]
name = "dory"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "A flexible implementation of the Dory polynomial commitment scheme."
repository = "https://github.com/spaceandtimelabs/sxt-dory"
exclude = [".github", "README.md"]

[dependencies]
blake2 = "0.10.6"
rand = "0.9.2"
tracing = "0.1.41"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
doc_markdown = "allow"
missing_docs_in_private_items = "warn"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
